force-app/main/default/objects/Opportunity/fields/Nesta_subfase_ha__c.field-meta.xml
<CustomField>
    <fullName>Nesta_subfase_ha__c</fullName>
    <formula>IF(
    ISBLANK(Data_de_alteracao_da_Subfase__c), 
    &quot;Informação não disponível&quot;, 
    TEXT(
        FLOOR((NOW() - Data_de_alteracao_da_Subfase__c) * 24)
    ) &amp; &quot; dias, &quot; &amp; 
    TEXT(
        MOD(FLOOR((NOW() - Data_de_alteracao_da_Subfase__c) * 1440), 60)
    ) &amp; &quot; horas e &quot; &amp; 
    TEXT(
        MOD(FLOOR((NOW() - Data_de_alteracao_da_Subfase__c) * 86400), 60)
    ) &amp; &quot; minutos&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nesta subfase há</label>
    <type>Text</type>
</CustomField>