force-app/main/default/objects/Opportunity/fields/Nome_da_conta__c.field-meta.xml
<CustomField>
    <fullName>Nome_da_conta__c</fullName>
    <formula>Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome da conta</label>
    <type>Text</type>
</CustomField>