force-app/main/default/objects/Opportunity/fields/Nome_da_Referencia_de_Faturamento__c.field-meta.xml
<CustomField>
    <fullName>Nome_da_Referencia_de_Faturamento__c</fullName>
    <label>Nome da Referência de Faturamento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>