force-app/main/default/objects/Opportunity/fields/Nome_de_destino__c.field-meta.xml
<CustomField>
    <fullName>Nome_de_destino__c</fullName>
    <label>Nome de destino</label>
    <length>255</length>
    <type>Text</type>
</CustomField>