force-app/main/default/objects/Opportunity/fields/Numero_da_Cota_o_Sincronizada__c.field-meta.xml
<CustomField>
    <fullName>Numero_da_Cota_o_Sincronizada__c</fullName>
    <formula>SyncedQuote.QuoteNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Numero da Cotação Sincronizada</label>
    <type>Text</type>
</CustomField>