force-app/main/default/objects/Opportunity/fields/Numero_de_prestacoes__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_prestacoes__c</fullName>
    <inlineHelpText>Financiamento apenas</inlineHelpText>
    <label>Número de prestações</label>
    <length>255</length>
    <type>Text</type>
</CustomField>