force-app/main/default/objects/Opportunity/fields/Numero_OP__c.field-meta.xml
<CustomField>
    <fullName>Numero_OP__c</fullName>
    <label>Número da oportunidade</label>
    <type>AutoNumber</type>
</CustomField>