force-app/main/default/objects/Opportunity/fields/Numero_Verba__c.field-meta.xml
<CustomField>
    <fullName>Numero_Verba__c</fullName>
    <label>Numero verba</label>
    <length>255</length>
    <type>Text</type>
</CustomField>