force-app/main/default/objects/Opportunity/fields/Observa_o_da_Condi_o__c.field-meta.xml
<CustomField>
    <fullName>Observa_o_da_Condi_o__c</fullName>
    <label>Observação da Condição</label>
    <length>255</length>
    <type>Text</type>
</CustomField>