force-app/main/default/objects/Opportunity/fields/Oportunidade_Adesao__c.field-meta.xml
<CustomField>
    <fullName>Oportunidade_Adesao__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Oportunidade Adesão ?</label>
    <type>Checkbox</type>
</CustomField>