force-app/main/default/objects/Opportunity/fields/Oportunidade_Carona__c.field-meta.xml
<CustomField>
    <fullName>Oportunidade_Carona__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Oportunidade Carona ?</label>
    <type>Checkbox</type>
</CustomField>