force-app/main/default/objects/Opportunity/fields/Oportunidade_Huawei__c.field-meta.xml
<CustomField>
    <fullName>Oportunidade_Huawei__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Oportunidade Huawei?</label>
    <type>Checkbox</type>
</CustomField>