force-app/main/default/objects/Opportunity/fields/Oportunidade_Neglig_cnia__c.field-meta.xml
<CustomField>
    <fullName>Oportunidade_Neglig_cnia__c</fullName>
    <formula>IF(
    TODAY() - DATEVALUE(LastModifiedDate) &gt; 30,
    &quot;SIM&quot;,
    &quot;NÃO&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Oportunidade Negligenciada</label>
    <type>Text</type>
</CustomField>