force-app/main/default/objects/Opportunity/fields/Oportunidade_OPME__c.field-meta.xml
<CustomField>
    <fullName>Oportunidade_OPME__c</fullName>
    <label>Oportunidade OPME?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SIM</fullName>
            </value>
            <value>
                <fullName>NÃO</fullName>
                <default>true</default>
                <label>NÃO</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>