force-app/main/default/objects/Opportunity/fields/Oportunidade_pai__c.field-meta.xml
<CustomField>
    <fullName>Oportunidade_pai__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Se esta é uma oportunidade filha, vincule-a com uma pai.</inlineHelpText>
    <label>Vínculo com Oportunidade Pai</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Oportunidades</relationshipLabel>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>