force-app/main/default/objects/Opportunity/fields/Ordem_de_trabalho_Relacionada__c.field-meta.xml
<CustomField>
    <fullName>Ordem_de_trabalho_Relacionada__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Ordem de Trabalho a qual essa Oportunidade pertence.</description>
    <inlineHelpText>Ordem de Trabalho a qual essa Oportunidade pertence.</inlineHelpText>
    <label>Ordem de trabalho (excluir)</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Oportunidades (desativado)</relationshipLabel>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>