force-app/main/default/objects/Opportunity/fields/Paciente2__c.field-meta.xml
<CustomField>
    <fullName>Paciente2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Paciente</label>
    <referenceTo>Paciente__c</referenceTo>
    <relationshipLabel>Procedimentos</relationshipLabel>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>