force-app/main/default/objects/Opportunity/fields/Pais_Conta__c.field-meta.xml
<CustomField>
    <fullName>Pais_Conta__c</fullName>
    <label>País da Conta</label>
    <type>TextArea</type>
</CustomField>