force-app/main/default/objects/Opportunity/fields/Prazo_de_entrega__c.field-meta.xml
<CustomField>
    <fullName>Prazo_de_entrega__c</fullName>
    <label>Prazo de entrega pedido</label>
    <length>255</length>
    <type>Text</type>
</CustomField>