force-app/main/default/objects/Opportunity/fields/Prazo_de_entrega_Edital__c.field-meta.xml
<CustomField>
    <fullName>Prazo_de_entrega_Edital__c</fullName>
    <label>Prazo de entrega edital</label>
    <length>255</length>
    <type>Text</type>
</CustomField>