force-app/main/default/objects/Opportunity/fields/Prazo_de_garantia__c.field-meta.xml
<CustomField>
    <fullName>Prazo_de_garantia__c</fullName>
    <defaultValue>&quot;equipamentos 12 meses, acessórios 3 meses&quot;</defaultValue>
    <inlineHelpText>Ex: equipamentos 12 meses, acessórios 3 meses, etc...</inlineHelpText>
    <label>Prazo de garantia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>