force-app/main/default/objects/Opportunity/fields/Prazo_Impugna_o__c.field-meta.xml
<CustomField>
    <fullName>Prazo_Impugna_o__c</fullName>
    <label>Prazo impugnação</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 dia útil</fullName>
            </value>
            <value>
                <fullName>2 dias úteis</fullName>
            </value>
            <value>
                <fullName>3 dias úteis</fullName>
            </value>
            <value>
                <fullName>4 dias úteis</fullName>
            </value>
            <value>
                <fullName>5 dias úteis</fullName>
            </value>
            <value>
                <fullName>6 dias úteis</fullName>
            </value>
            <value>
                <fullName>7 dias úteis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>