force-app/main/default/objects/Opportunity/fields/Prazo_para_analise__c.field-meta.xml
<CustomField>
    <fullName>Prazo_para_analise__c</fullName>
    <label>Prazo para análise</label>
    <type>Date</type>
</CustomField>