force-app/main/default/objects/Opportunity/fields/Prazo_para_interposi_o_de_recurso__c.field-meta.xml
<CustomField>
    <fullName>Prazo_para_interposi_o_de_recurso__c</fullName>
    <label>Prazo para interposição de recurso</label>
    <type>DateTime</type>
</CustomField>