force-app/main/default/objects/Opportunity/fields/Previs_o_do_Einstein__c.field-meta.xml
<CustomField>
    <fullName>Previs_o_do_Einstein__c</fullName>
    <label>Previsão do Einstein</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>