force-app/main/default/objects/Opportunity/fields/Processo__c.field-meta.xml
<CustomField>
    <fullName>Processo__c</fullName>
    <label>Número do processo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>