force-app/main/default/objects/Opportunity/fields/Produtos_Ultrassom__c.field-meta.xml
<CustomField>
    <fullName>Produtos_Ultrassom__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Produtos Ultrassom</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>