force-app/main/default/objects/Opportunity/fields/Proposta_detalhada__c.field-meta.xml
<CustomField>
    <fullName>Proposta_detalhada__c</fullName>
    <formula>false</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proposta detalhada</label>
    <type>Checkbox</type>
</CustomField>