force-app/main/default/objects/Opportunity/fields/Proposta_valida__c.field-meta.xml
<CustomField>
    <fullName>Proposta_valida__c</fullName>
    <formula>NOT(
OR(
    ISBLANK(Contato__c),
    ISBLANK(Prazo_de_entrega__c),
    ISBLANK(Data_de_emissao__c),
    ISBLANK(Data_de_Validade__c),
    ISBLANK(Nome_da_Referencia_de_Faturamento__c),
    ISBLANK(Prazo_de_garantia_acessorios__c),
    ISBLANK(Prazo_de_garantia_dos_equipamentos__c),
    ISBLANK(TEXT(Frete__c)),
    ISBLANK(TEXT(Forma_de_pagamento2__c)),
    ISBLANK(TEXT(Condicao_de_pagamento__c))
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proposta válida</label>
    <type>Checkbox</type>
</CustomField>