force-app/main/default/objects/Opportunity/fields/Protocolo_Recurso__c.field-meta.xml
<CustomField>
    <fullName>Protocolo_Recurso__c</fullName>
    <label>Protocolo recurso</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PRESENCIAL</fullName>
            </value>
            <value>
                <fullName>ELETRÔNICA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>