force-app/main/default/objects/Opportunity/fields/Quantidade_de_Analises_de_Mercado__c.field-meta.xml
<CustomField>
    <fullName>Quantidade_de_Analises_de_Mercado__c</fullName>
    <label>Quantidade de Analises de Mercado</label>
    <summaryForeignKey>Analise_de_Mercado__c.Oportunidade__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>