force-app/main/default/objects/Opportunity/fields/Registro_ATA__c.field-meta.xml
<CustomField>
    <fullName>Registro_ATA__c</fullName>
    <label>Registro ATA</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ATA_SRP__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MUNICIPAL</fullName>
            </value>
            <value>
                <fullName>ESTADUAL</fullName>
            </value>
            <value>
                <fullName>FEDERAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>