force-app/main/default/objects/Opportunity/fields/representante__c.field-meta.xml
<CustomField>
    <fullName>representante__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Representante</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Oportunidades (REPRESENTANTE)</relationshipLabel>
    <relationshipName>Oportunidades2</relationshipName>
    <type>Lookup</type>
</CustomField>