force-app/main/default/objects/Opportunity/fields/Score_da_Oportunidade__c.field-meta.xml
<CustomField>
    <fullName>Score_da_Oportunidade__c</fullName>
    <label>Score da Oportunidade</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>