force-app/main/default/objects/Opportunity/fields/Senha__c.field-meta.xml
<CustomField>
    <fullName>Senha__c</fullName>
    <formula>Portal_da_licita_o__r.Senha__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Senha</label>
    <type>Text</type>
</CustomField>