force-app/main/default/objects/Opportunity/fields/Sincronizar__c.field-meta.xml
<CustomField>
    <fullName>Sincronizar__c</fullName>
    <formula>IF(SyncedQuoteId==null, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sincronizar*</label>
    <type>Checkbox</type>
</CustomField>