force-app/main/default/objects/Opportunity/fields/Site_do_portal__c.field-meta.xml
<CustomField>
    <fullName>Site_do_portal__c</fullName>
    <formula>Portal_da_licita_o__r.Link_do_portal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site do portal</label>
    <type>Text</type>
</CustomField>