force-app/main/default/objects/Opportunity/fields/Situacao_do_contrato__c.field-meta.xml
<CustomField>
    <fullName>Situacao_do_contrato__c</fullName>
    <formula>IF(
Data_de_termino_do_contrato__c&lt; TODAY(), 
    &quot;VENCIDO&quot;,
    IF(
     Data_de_termino_do_contrato__c &lt;= TODAY() + 30, 
    &quot;A VENCER EM 30 DIAS&quot;,
    IF(
        Data_de_termino_do_contrato__c &lt;= TODAY() + 60, 
        &quot;A VENCER EM 60 DIAS&quot;,
        IF(
                OR(
                    ISNULL(Data_de_termino_do_contrato__c), 
                    ISNULL(Data_de_inicio_do_contrato__c)
            ), 
            &quot;ERRO&quot;,
            &quot;VIGENTE&quot;
        )
    )
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Situação do contrato</label>
    <type>Text</type>
</CustomField>