force-app/main/default/objects/Opportunity/fields/Status_da_Assinatura__c.field-meta.xml
<CustomField>
    <fullName>Status_da_Assinatura__c</fullName>
    <label>Status da Assinatura</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assinatura do cliente</fullName>
            </value>
            <value>
                <fullName>Aprovação financeira</fullName>
            </value>
            <value>
                <fullName>Assinatura do administrador</fullName>
            </value>
            <value>
                <fullName>Assinaturas finalizadas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>