force-app/main/default/objects/Opportunity/fields/Sub_Fase__c.field-meta.xml
<CustomField>
    <fullName>Sub_Fase__c</fullName>
    <label>Subfase</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>COTAÇÃO PRÉVIA</fullName>
            </value>
            <value>
                <fullName>ABORTADO</fullName>
            </value>
            <value>
                <fullName>AGUARDANDO ANÁLISE</fullName>
            </value>
            <value>
                <fullName>AGUARDANDO CONTRATO</fullName>
            </value>
            <value>
                <fullName>AGUARDANDO EMPENHO</fullName>
            </value>
            <value>
                <fullName>AGUARDANDO HOMOLOGAÇÃO/ADJUDICADO</fullName>
            </value>
            <value>
                <fullName>AGUARDANDO PARTICIPAÇÃO</fullName>
            </value>
            <value>
                <fullName>EM ANDAMENTO</fullName>
            </value>
            <value>
                <fullName>CANCELADO</fullName>
            </value>
            <value>
                <fullName>DUPLICADO</fullName>
            </value>
            <value>
                <fullName>LOCAÇÃO</fullName>
            </value>
            <value>
                <fullName>ESTIMATIVA DE PREÇOS</fullName>
            </value>
            <value>
                <fullName>FINALIZADO TOTAL</fullName>
            </value>
            <value>
                <fullName>IMPUGNAÇÃO/ESCLARECIMENTOS</fullName>
            </value>
            <value>
                <fullName>PERDIDO</fullName>
            </value>
            <value>
                <fullName>RECURSO</fullName>
            </value>
            <value>
                <fullName>SUSPENSO</fullName>
            </value>
            <value>
                <fullName>FINALIZADO PARCIAL</fullName>
            </value>
            <value>
                <fullName>AGUARDANDO HABILITAÇÃO</fullName>
            </value>
            <value>
                <fullName>AGUARDANDO ENTREGA</fullName>
            </value>
            <value>
                <fullName>CONTRARRAZÃO DE RECURSO</fullName>
            </value>
            <value>
                <fullName>NEGÓCIO FUTURO</fullName>
            </value>
            <value>
                <fullName>COMODATO</fullName>
            </value>
            <value>
                <fullName>GARANTIDO</fullName>
            </value>
            <value>
                <fullName>AGUARDANDO DECISÃO DE RECURSO</fullName>
            </value>
            <value>
                <fullName>AGUARDANDO CONTRATO/EMPENHO</fullName>
                <isActive>false</isActive>
                <label>AGUARDANDO CONTRATO/EMPENHO</label>
            </value>
            <value>
                <fullName>PREVISTO</fullName>
                <isActive>false</isActive>
                <label>PREVISTO</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>