force-app/main/default/objects/Opportunity/fields/Tempo_de_fechamento__c.field-meta.xml
<CustomField>
    <fullName>Tempo_de_fechamento__c</fullName>
    <formula>IF(OR(TEXT(StageName) == &apos;WIN&apos;,TEXT(StageName) == &apos;LOSS&apos;), CloseDate - DATEVALUE(CreatedDate), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tempo de fechamento</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>