force-app/main/default/objects/Opportunity/fields/Tempo_em_Aberto2__c.field-meta.xml
<CustomField>
    <fullName>Tempo_em_Aberto2__c</fullName>
    <formula>Tempo_em_Aberto__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tempo em Aberto*</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>