force-app/main/default/objects/Opportunity/fields/Tipo_da_Conta__c.field-meta.xml
<CustomField>
    <fullName>Tipo_da_Conta__c</fullName>
    <formula>TEXT(Account.Type)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo da Conta</label>
    <type>Text</type>
</CustomField>