force-app/main/default/objects/Opportunity/fields/Tipo_de_Opera_o__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Opera_o__c</fullName>
    <label>Tipo de Oportunidade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OPORTUNIDADE REGULAR</fullName>
                <default>true</default>
                <label>OPORTUNIDADE REGULAR</label>
            </value>
            <value>
                <fullName>OPORTUNIDADE PAI</fullName>
            </value>
            <value>
                <fullName>OPORTUNIDADE FILHA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>