force-app/main/default/objects/Opportunity/fields/Total_de_pedidos__c.field-meta.xml
<CustomField>
    <fullName>Total_de_pedidos__c</fullName>
    <label>Total de pedidos</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>