force-app/main/default/objects/Opportunity/fields/Total_empenhado__c.field-meta.xml
<CustomField>
    <fullName>Total_empenhado__c</fullName>
    <label>Total empenhado</label>
    <summarizedField>Empenho__c.Valor__c</summarizedField>
    <summaryForeignKey>Empenho__c.Oportunidade__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>