force-app/main/default/objects/Opportunity/fields/Upside__c.field-meta.xml
<CustomField>
    <fullName>Upside__c</fullName>
    <formula>IF(
OR(
TEXT(StageName) == &apos;UPSIDE&apos;,
TEXT(StageName) == &apos;UPSIDE HIGH&apos;
),  Amount , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Upside</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>