force-app/main/default/objects/Opportunity/fields/Verba__c.field-meta.xml
<CustomField>
    <fullName>Verba__c</fullName>
    <label>Verba</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MUNICIPAL</fullName>
            </value>
            <value>
                <fullName>ESTADUAL</fullName>
            </value>
            <value>
                <fullName>FEDERAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>