force-app/main/default/objects/Opportunity/recordTypes/Comercial.recordType-meta.xml
<RecordType>
    <fullName>Comercial</fullName>
    <active>true</active>
    <businessProcess>Padrão</businessProcess>
    <description>Processo de vendas comercial</description>
    <label>Comercial</label>
</RecordType>