force-app/main/default/objects/Opportunity/recordTypes/Licitacao.recordType-meta.xml
<RecordType>
    <fullName>Licitacao</fullName>
    <active>true</active>
    <businessProcess>Padrão</businessProcess>
    <description>Processo de vendas licitação</description>
    <label>Licitação</label>
</RecordType>