force-app/main/default/objects/Opportunity/recordTypes/OPME.recordType-meta.xml
<RecordType>
    <fullName>OPME</fullName>
    <active>true</active>
    <businessProcess>Padrão</businessProcess>
    <description>Oportunidades Zimmer</description>
    <label>OPME - Zimmer</label>
</RecordType>