force-app/main/default/objects/Opportunity/recordTypes/OPME_2.recordType-meta.xml
<RecordType>
    <fullName>OPME_2</fullName>
    <active>true</active>
    <businessProcess>Padrão</businessProcess>
    <label>OPME</label>
</RecordType>