force-app/main/default/objects/Opportunity/recordTypes/OPME_Baumer.recordType-meta.xml
<RecordType>
    <fullName>OPME_Baumer</fullName>
    <active>true</active>
    <businessProcess>Padrão</businessProcess>
    <label>OPME - Baumer</label>
</RecordType>