force-app/main/default/objects/Opportunity/recordTypes/OPME_GERAL.recordType-meta.xml
<RecordType>
    <fullName>OPME_GERAL</fullName>
    <active>true</active>
    <businessProcess>Padrão</businessProcess>
    <label>OPME – GERAL</label>
</RecordType>