force-app/main/default/objects/Opportunity/validationRules/Departamento_Licitacao.validationRule-meta.xml
<ValidationRule>
    <fullName>Departamento_Licitacao</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
RecordType.Id = &apos;0125A000000y345&apos;,
TEXT(Departamento__c) != &apos;Governo&apos;
)</errorConditionFormula>
    <errorDisplayField>Departamento__c</errorDisplayField>
    <errorMessage>Oportunidades de licitação devem ser do departamento de Governo.</errorMessage>
</ValidationRule>