force-app/main/default/objects/Opportunity/validationRules/Endereco_da_conta.validationRule-meta.xml
<ValidationRule>
    <fullName>Endereco_da_conta</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
Account.BillingCountry == &apos;Brasil&apos;,
ISNEW(),
OR(
Account.BillingState == &apos;&apos;,
Account.BillingCity == &apos;&apos;,
Account.BillingStreet == &apos;&apos;,
Account.BillingPostalCode == &apos;&apos;
)
)</errorConditionFormula>
    <errorMessage>Preencha corretamente o endereço da conta.</errorMessage>
</ValidationRule>